--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,5 +8,7 @@ diego:
   employer: "Universidad Mayor"
   email: "diego.palacios@umayor.cl"
   twitter: "diegopalacios__"
-  linkedin: "diego-palacios-29a91035"
+  linkedin: "https://www.linkedin.com/in/diego-palacios-farias-29a91035/"
   github: "diegopalaciosf"
+  orcid: "https://orcid.org/0000-0001-6840-0068"
+  googlescholar: "https://scholar.google.com/citations?user=0rPpfrsAAAAJ&hl=en"
