--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Diego Palacios Farias"
 title_separator          : "-"
 name                     : "Diego Palacios Farias"
-description              : "Assistant Professor | Social Network Analysis | Adolescence | Peer Relations | Substance Use"
+description              : "Assistant Professor at CISS"
 url                      : https://diegopalaciosf.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
