--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 diego:
   name: "Diego Palacios Farias"
-  avatar: "/images/profile1.jpg"
+  avatar: "/images/diego.jpg"
   bio: "Assistant Professor at the Society and Health Research Center (CISS), Universidad Mayor (Chile). Social network analysis in schools, families, and organizations."
   location: "Santiago, Chile"
   employer: "Universidad Mayor"
