--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ markdown: kramdown
 
 author:
   name: "Diego Palacios Farias"
-
+  avatar: "/images/Diego_Palacios.jpg"
 # IMPORTANT: publish pages stored in _pages
 include:
   - _pages
