--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ markdown: kramdown
 
 author:
   name: "Diego Palacios Farias"
-  avatar: "/images/profile.png" 
-  avatar_url: "/images/profile.png"
+  avatar: "/images/Diego_Palacios.jpg" 
+  #avatar_url: "/images/profile.png"
 # IMPORTANT: publish pages stored in _pages
 include:
   - _pages
