--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,16 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Presentations"
+    url: /presentations/
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+
+  - title: "Guide"
+    url: /markdown/
+
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+ 
