--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,8 @@ main:
   - title: "Teaching"
     url: /teaching/
 
+  - title: "Supervision"
+    url: /supervision/
+
   - title: "CV"
     url: /cv/
