--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,8 @@ main:
   - title: "Supervision"
     url: /supervision/
 
+  - title: "Service & Editorial"
+    url: /service/
+    
   - title: "CV"
     url: /cv/
