--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /supervision/
 
   - title: "Service & Editorial"
-    url: /Service & Editorial/
+    url: /service/
     
   - title: "CV"
     url: /cv/
