--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
   - title: "Supervision"
     url: /supervision/
 
+  - title: "Press"
+    url: /press/
+
   - title: "Service & Editorial"
     url: /service/
     
