--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Diego Palacios Farias"
+title: "About me"
 description: "Assistant Professor | Social Network Analysis | Adolescence | Peer relations | Substance use"
 url: "https://diegopalaciosf.github.io"
 baseurl: ""
